# pylsp-docformatter

./: AUTHORS.txt  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
pylsp_docformatter/: __init__.py  plugin.py  types.py  util.py
test/: test_plugin.py  test_util.py
