
[metadata]
name = pylsp-docformatter
version = 0.1
author = Heinrich Kruger
author_email = heindsight@kruger.dev
url = https://github.com/heindsight/pylsp-docformatter
description = Docformatter plugin for the Python LSP Server.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: BSD License


[options]

packages = find:

install_requires = 
    python-lsp-server

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_docformatter = pylsp_docformatter.plugin


[options.extras_require]
dev =
    pytest
